--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App > div {
+  flex: 1 1 0px;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.section-title {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.section-body {
+  margin-top: 25px;
+}
+
+.list-content {
+  margin-top: 18px;
+}
+
+.list-row {
+  margin-top: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    flex-direction: column;
   }
 }
