--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 
 .App > div {
   flex: 1 1 0px;
-  padding: 20px;
+  padding: 40px;
 }
 
 .section-title {
@@ -29,6 +29,10 @@ body {
   margin-top: 5px;
 }
 
+.list-row:hover {
+  background-color: #f8f8f854;
+}
+
 .btn {
   border: none;
   border-radius: 4px;
@@ -36,6 +40,12 @@ body {
   font-size: inherit;
   color: black;
   background-color: #d3e1eb;
+}
+
+.btn:hover {
+  background-color: #00BCD4;
+  color: white;
+  cursor: pointer;
 }
 
 input {
@@ -51,7 +61,7 @@ input:focus {
 
 .list-row-separator {
   border-top: 1px solid #f4f4f4;
-  width: 87%;
+  width: 99%;
   margin: 4px 0;
 }
 
